--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "fetch-cookie": "^3.2.0",
+    "node-fetch": "^3.3.2",
+    "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
